--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@mdx-js/mdx":"1.6.22"
   },
   "scripts": {
     "start": "react-scripts start",
