--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mdx-js/mdx": "1.6.22",
+    "@mdx-js/mdx": "^2.1.2",
     "@popperjs/core": "2.10.2",
     "@sendgrid/mail": "^7.6.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,7 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.2"
   },
