--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@mdx-js/mdx": "^2.1.2",
     "@popperjs/core": "2.10.2",
-    "@sendgrid/mail": "^7.6.0",
+    "@sendgrid/mail": "^7.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
+    "dotenv": "^16.0.1",
     "easymde": "^2.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -46,5 +47,10 @@
   "devDependencies": {
     "@types/react": "^17.0.34",
     "@types/react-router-dom": "^5.3.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
