--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.2",
     "dotenv": "^16.0.1",
     "easymde": "^2.15.0",
+    "marked": "^4.0.18",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
