--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "2.10.2",
+    "@popperjs/core": "2.11.5",
     "@sendgrid/mail": "^7.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.0.2",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.1",
+    "@types/react-dom": "^18.0.6",
+    "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
     "easymde": "^2.15.0",
     "marked": "^4.0.18",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "reactstrap": "^8.9.0",
+    "typescript": "^4.7.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -45,7 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.34",
+    "@types/react": "^17.0.48",
     "@types/react-router-dom": "^5.3.2"
   },
   "browser": {
