--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "marked": "^4.0.18",
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^5.2.0",
     "reactstrap": "^9.1.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -47,9 +47,9 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1",
     "@types/react": "^17.0.48",
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-router-dom": "^5.3.3",
+    "react-scripts": "^5.0.1"
   },
   "browser": {
     "fs": false,
