--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "relocate": "react-scripts build && Move build ../backend"
-  },
+    "eject": "react-scripts eject"
+
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
