--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve -s",
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-
+    
     },
   "eslintConfig": {
     "extends": [
