--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-router-dom": "^5.2.0",
     "reactstrap": "^9.1.2",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-scripts": "^5.0.1"
+
   },
   "scripts": {
     "start": "react-scripts start",
