--- a/package.json
+++ b/package.json
@@ -16,19 +16,18 @@
     "marked": "^4.0.18",
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.2.0",
+    "@types/react-router-dom": "^5.3.3",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.2",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "react-scripts": "^5.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
-    },
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -48,8 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.48",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react": "^17.0.48"
   },
   "browser": {
     "fs": false,
