--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.2",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
     "easymde": "^2.16.1",
