--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.48",
-    "react-router-dom": "^5.2.0"
+    "@types/react": "^17.0.48"
   },
   "browser": {
     "fs": false,
